tests/sideEffectingExpressions/invalid/semantic/TypeErr2.wacc
# invalid types

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  bool b = false ;
  b--
end
